# First_POC_MODBUS

./: mqtt_test_data.txt  test_git.txt
obser_1/: example_issue.txt
obser_1/mb_slave/: sdkconfig
obser_1/modbus_support/: CMakeLists.txt  sdkconfig
obser_1/modbus_support/main/: master.c
obser_11/mqtt_wifi_pub_sub_aws/: CMakeLists.txt
obser_11/mqtt_wifi_pub_sub_aws/main/: CMakeLists.txt  constants.h  demo_config.h  master.c  mqtt_demo_mutual_auth.c
obser_11/simple_mqtt_wifi_pub_sub_aws/: README.md
obser_11/simple_mqtt_wifi_pub_sub_aws/main/: constants.h  master.c
obser_11/wifi_pub_subs_aws/: CMakeLists.txt
obser_11/wifi_pub_subs_aws/main/: constants.h  master.c
obser_11/yutube_http_get/: CMakeLists.txt
obser_11/yutube_http_get/main/: CMakeLists.txt  my_data.h  proj3.c
obser_2/mb_master/: CMakeLists.txt  sdkconfig.old
obser_2/mb_master/main/: master.c
obser_3/RS485_HalfDuplex_temp/: RS485_HalfDuplex_temp.ino
obser_3/test1/: test1.ino
obser_3/test_example/: test_example.ino
obser_4/MODBUS_MASTER/: CMakeLists.txt
obser_4/MODBUS_MASTER/main/: master.c
obser_5/MODBUS_MASTER_wifi/: CMakeLists.txt  sdkconfig
obser_5/MODBUS_MASTER_wifi/main/: constants.h  master.c
obser_6/http_client_post/: sdkconfig  sdkconfig.old
obser_7/youtube_code/: CMakeLists.txt
obser_8/modbus_wifi_aws/: CMakeLists.txt
obser_9/P1_wifi_aws_IO/: CMakeLists.txt
obser_9/P1_wifi_aws_IO/main/: CMakeLists.txt  constants.h  master.c
obser_9/P1_wifi_aws_IO/main/files/: obser7private.pem.key
test_rs_485/uart_echo_rs485/: sdkconfig
(+12 files in other folders)
